--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -8,24 +8,16 @@ exporters:
   debug:
     verbosity: detailed
 
-  prometheus:
-    endpoint: "0.0.0.0:8889"
-    const_labels:
-      label1: value1
-
-  logging:
-
-  zipkin:
-    endpoint: "http://zipkin.railway.internal:9411/api/v2/spans"
-    format: proto
-
-  otlp/jaeger:
-    endpoint: jaeger.railway.internal:4317
-    tls:
-      insecure: true
+  otlp/grafanacloud:
+    endpoint: ${env:OTEL_EXPORTER_OTLP_ENDPOINT}
+    headers: ${env:OTEL_EXPORTER_OTLP_HEADERS}
 
 processors:
   batch:
+  memory_limiter:
+    check_interval: 1s
+    limit_percentage: 80
+    spike_limit_percentage: 15
 
 extensions:
   health_check:
@@ -39,9 +31,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch]
-      exporters: [logging, zipkin, otlp/jaeger, debug]
+      processors: [batch, memory_limiter]
+      exporters: [otlp/grafanacloud, debug]
     metrics:
       receivers: [otlp]
-      processors: [batch]
-      exporters: [logging, prometheus, debug]
+      processors: [batch, memory_limiter]
+      exporters: [otlp/grafanacloud, debug]
+    logs:
+      receivers: [otlp]
+      processors: [batch, memory_limiter]
+      exporters: [otlp/grafanacloud, debug]
