format change for headers

--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -10,7 +10,8 @@ exporters:
 
   otlp/grafanacloud:
     endpoint: ${env:OTEL_EXPORTER_OTLP_ENDPOINT}
-    headers: ${env:OTEL_EXPORTER_OTLP_HEADERS}
+    headers: 
+      authorization: ${env:OTEL_EXPORTER_OTLP_HEADERS}
 
 processors:
   batch:
