--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -9,10 +9,11 @@ exporters:
   debug:
     verbosity: detailed
 
-  otlphttp/grafanacloud:
-    endpoint: ${env:OTEL_EXPORTER_OTLP_ENDPOINT}
-    headers: 
-      authorization: ${env:OTEL_EXPORTER_OTLP_HEADERS}
+  otlphttp/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector/tree/main/exporter/otlphttpexporter
+    endpoint: "${env:GRAFANA_CLOUD_OTLP_ENDPOINT}"
+    auth:
+      authenticator: basicauth/grafana_cloud
 
 processors:
   batch:
@@ -27,6 +28,12 @@ extensions:
     endpoint: 0.0.0.0:1888
   zpages:
     endpoint: 0.0.0.0:55679
+    extensions:
+  basicauth/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/extension/basicauthextension
+    client_auth:
+      username: "${env:GRAFANA_CLOUD_INSTANCE_ID}"
+      password: "${env:GRAFANA_CLOUD_API_KEY}"
 
 service:
   extensions: [pprof, zpages, health_check]
@@ -34,12 +41,12 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch, memory_limiter]
-      exporters: [otlphttp/grafanacloud, debug]
+      exporters: [otlphttp/grafana_cloud, debug]
     metrics:
       receivers: [otlp]
       processors: [batch, memory_limiter]
-      exporters: [otlphttp/grafanacloud, debug]
+      exporters: [otlphttp/grafana_cloud, debug]
     logs:
       receivers: [otlp]
       processors: [batch, memory_limiter]
-      exporters: [otlphttp/grafanacloud, debug]
+      exporters: [otlphttp/grafana_cloud, debug]
