--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -35,7 +35,7 @@ extensions:
       password: "${env:GRAFANA_CLOUD_API_KEY}"
 
 service:
-  extensions: [pprof, zpages, health_check]
+  extensions: [pprof, zpages, health_check, basicauth/grafana_cloud]
   pipelines:
     traces:
       receivers: [otlp]
